--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ add_executable(${PROJECT_NAME}
     src/glad.c
 
 
+
 )
 
 # GLM: this creates its library and allows you to `#include "glm/..."`
@@ -102,10 +103,12 @@ qt6_add_resources(${PROJECT_NAME} "Resources"
     resources/shaders/framebuffer.frag
     resources/shaders/model.frag
     resources/shaders/model.vert
+    resources/shaders/instancing.vert
 )
 
 target_sources(yesmansky_other_files
   PRIVATE
+  resources/shaders/instancing.vert
 
 )
 
