--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ add_executable(${PROJECT_NAME}
     src/utils/vbo.h src/utils/vbo.cpp
     src/utils/shader.h src/utils/shader.cpp
     src/glad.c
+    src/meshes/skybox.h src/meshes/skybox.cpp
 
 
 
