--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ add_executable(${PROJECT_NAME}
 
 
 
+
 )
 
 # GLM: this creates its library and allows you to `#include "glm/..."`
@@ -109,10 +110,12 @@ qt6_add_resources(${PROJECT_NAME} "Resources"
     resources/shaders/instancing.vert
     resources/shaders/skybox.frag
     resources/shaders/skybox.vert
+    resources/shaders/spaceship.vert
 )
 
 target_sources(yesmansky_other_files
   PRIVATE
+  resources/shaders/spaceship.vert
 
 )
 
